tests/__snapshots__/validation-configFile-unknown-options-stderr.snap.txt
Error: Unknown option 'cache'.

  1 | {
  2 |   "cache": ["all"],
    |   ~~~~~~~
  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "silent": true,

      at ./tstyche.config.json:2:3

Error: Unknown option 'cacheTrailing'.

  1 | {
  2 |   "cache": ["all"],
  3 |   "cacheTrailing": ["all", "best",],
    |   ~~~~~~~~~~~~~~~
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "silent": true,

      at ./tstyche.config.json:3:3

Error: Unknown option 'globals'.

  2 |   "cache": ["all"],
  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
    |   ~~~~~~~~~
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "silent": true,
  7 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],

      at ./tstyche.config.json:4:3

Error: Unknown option 'globalsTrailing'.

  3 |   "cacheTrailing": ["all", "best",],
  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
    |   ~~~~~~~~~~~~~~~~~
  6 |   "silent": true,
  7 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
  8 |   "ups":,

      at ./tstyche.config.json:5:3

Error: Unknown option 'silent'.

  4 |   "globals": { delay: 123 },
  5 |   "globalsTrailing": { break: true, delay: 123, },
  6 |   "silent": true,
    |   ~~~~~~~~
  7 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
  8 |   "ups":,
  9 | }

      at ./tstyche.config.json:6:3

Error: Unknown option 'ups'.

   6 |   "silent": true,
   7 |   "testFileMatch": ["**/packages/*/__typetests__/*.test.ts"],
   8 |   "ups":,
     |   ~~~~~
   9 | }
  10 | 

       at ./tstyche.config.json:8:3

